--- a/.gitignore
+++ b/.gitignore
@@ -12,10 +12,13 @@ venv/
 env/
 
 # Dataset directories (downloaded separately)
-/Elements
-/Glyphs
+data/Elements
+data/Glyphs
 /original_data/Elements
 /original_data/Glyphs
+
+dataset_samples/
+generated_data/
 
 original_data/
 
